compiler/tests/safety/fail/common/fail_land.jazz
export fn BS2POLVECq(reg u32 b) 
{
  reg u32 tmp;

  b = 100;
  tmp = 0xfe;                 // 255
  b &= tmp;

  tmp = 1;
  if (b != 100){
    #[ensure_termination]while (true) { b += tmp; }
  }
}
